<resources>
    <string name="app_name">Team7_BLE-Meet</string>
    <string name="sign_up_1">Sign Up</string>
    <string name="sign_up_2">SIGN UP</string>
    <string name="username_1">Username</string>
    <string name="email_1">Email</string>
    <string name="password_1">Password</string>
    <string name="confirm_password_1">Confirm Password</string>
    <string name="login_1">Login</string>
    <string name="log_in_1">Log In</string>
    <string name="log_in_2">LOG IN</string>
    <string name="username_or_email_1">Username or Email</string>
    <string name="oldpassword">Old Password</string>
    <string name="newpassword">New Password</string>
    <string name="comfirm_password">Comfirn Password</string>
    <string-array name="gender_spinner">
        <item>Male</item>
        <item>Female</item>
        <item>Gay</item>
        <item>Lebian</item>
        <item>Undefine</item>
    </string-array>
    <string name="title_activity_splash">SplashActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="title_activity_scan">ScanActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="confirmation">Confirmation</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="delete_3">Delete</string>
    <string name="todo_3">TODO</string>
    <string name="stop_3">STOP</string>
    <string name="start_3">START</string>
    <string name="needpassions">You must select a minimum 3 of passions</string>
    <string name="needpassionsabout">To have passions display on your profile, you must select at least 3 passions</string>
</resources>