<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="signUpViewModel"
            type="com.ceslab.team7_ble_meet.signup.SignUpViewModel" />
    </data>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ic_sign_up"
        tools:context=".signup.SignUpActivity">

        <TextView
            android:id="@+id/SignUp_tvSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:textColor="@color/black"
            android:fontFamily="@font/roboto_regular"
            android:text="Let's Get Started !"
            android:textSize="32dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"/>
        <LinearLayout
            android:id="@+id/layout_editsignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true">
            <EditText
                android:id="@+id/SignUp_edtEmail"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:paddingVertical="15dp"
                android:paddingLeft="15dp"
                android:background="@drawable/selector_edittext"
                android:ems="10"
                android:hint="@string/email_1"
                android:inputType="textEmailAddress"
                android:text="@={signUpViewModel.email}"
                android:drawableStart="@drawable/ic_user_20"
                android:drawablePadding="10dp"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtInputLayoutPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                app:boxBackgroundMode="none"
                app:hintAnimationEnabled="false"
                app:hintEnabled="false"
                app:endIconMode="password_toggle"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/SignUp_edtPassword"
                    android:drawableStart="@drawable/ic_lock"
                    android:drawablePadding="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:paddingVertical="15dp"
                    android:background="@drawable/selector_edittext"
                    android:inputType="textPassword"
                    android:text="@={signUpViewModel.password}"
                    android:hint="@string/password_1"
                    android:password="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtInputLayoutRePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                app:boxBackgroundMode="none"
                app:hintAnimationEnabled="false"
                app:hintEnabled="false"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/SignUp_edtRePassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_lock"
                    android:drawablePadding="10dp"
                    android:password="true"
                    android:ems="10"
                    android:text="@={signUpViewModel.rePassword}"
                    android:paddingVertical="15dp"
                    android:background="@drawable/selector_edittext"
                    android:hint="@string/confirm_password_1"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="vertical"
           android:layout_below="@+id/layout_editsignup"
           android:gravity="center_horizontal">
           <LinearLayout
               android:id="@+id/SignUp_btnSignUp"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginTop="25dp"
               android:paddingVertical="16dp"
               android:layout_centerHorizontal="true"
               android:paddingHorizontal="64dp"
               android:text="@string/sign_up_2"
               android:background="@drawable/ripble_button"
               android:layout_alignBottom="@+id/SignUp_tvGoToSignIn"
               android:orientation="vertical"
               android:gravity="center">
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:gravity="center"
                   android:textColor="@color/white"
                   android:textStyle="bold"
                   android:text="Sign Up"></TextView>
           </LinearLayout>
       </LinearLayout>

    </RelativeLayout>
</layout>