<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        >
        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">
            <LinearLayout
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingRight="20dp"
                android:orientation="horizontal"
                >
                <Button
                    android:layout_width="18dp"
                    android:layout_height="18dp"

                    android:background="@drawable/left_arrow"
                    />
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:text="Change Password"
                    android:textColor="@color/black"/>



            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        tools:context=".changepassword.ChangePasswordActivity">

        <EditText
            android:id="@+id/editText3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/oldpassword"
            android:password="true"
            android:paddingVertical="10dp"
            android:background="@drawable/shape_edittext_chat"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.211"
            tools:ignore="MissingConstraints"></EditText>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/newpassword"
            android:password="true"
            android:paddingVertical="10dp"
            android:background="@drawable/shape_edittext_chat"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.352"
            tools:ignore="MissingConstraints"></EditText>

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/comfirm_password"
            android:password="true"
            android:paddingVertical="10dp"
            android:background="@drawable/shape_edittext_chat"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.517"
            tools:ignore="MissingConstraints"></EditText>

        <LinearLayout
            android:id="@+id/btn_continue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginHorizontal="65dp"
            android:layout_marginVertical="5dp"
            android:background="@drawable/ripble_button"
            android:clickable="true"
            android:gravity="center"
            android:paddingVertical="12dp"
            android:textColor="#F4F4F4"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:layout_editor_absoluteX="20dp">

            <ProgressBar
                android:id="@+id/progressbar"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_centerInParent="true"
                android:paddingVertical="-5dp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tv_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Save"
                android:textColor="@color/colorwhite"
                android:textSize="18dp"
                android:textStyle="bold" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>
